[package]
authors = ["Claus Matzinger <claus.matzinger+kb@gmail.com>"]
edition = "2021"
name = "manning-lp-async-rust-project-1-m1"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = {version = "~4", features = ["derive"]}
yahoo_finance_api = { version = "1" }
async-trait = "0.1"
tokio = { version = "1.21.2", features = ["full"] }
futures-util = "0.3"